added express server

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "heroku-postbuild": "webpack -p"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1"
