--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "heroku-postbuild": "yarn build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
