--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
