--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-notification": "^1.3.13",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-truncate-filter": "^1.1.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
