--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-material": "^1.0.0-beta-10.2",
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
-    "vue-truncate-filter": "^1.1.7"
+    "vue-truncate-filter": "^1.1.7",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
