--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "vue": "^2.5.17",
+    "vue-i18n": "^8.5.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
